[gd_scene load_steps=5 format=3 uid="uid://bopt6v0hjanoo"]

[ext_resource type="Script" uid="uid://lxffykngxiyj" path="res://characters/mobs/virus_1A.gd" id="1_y5fr5"]
[ext_resource type="Texture2D" uid="uid://c2o1pjmfghcky" path="res://characters/mobs/virus_sheet.png" id="2_ar3vn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jhkx1"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ndjc5"]
radius = 12.0

[node name="virus_1A" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_y5fr5")

[node name="VirusSheet" type="Sprite2D" parent="."]
texture = ExtResource("2_ar3vn")
region_enabled = true
region_rect = Rect2(5, 5, 22, 22)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_jhkx1")

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_ndjc5")

[node name="HitParticles" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 0, 1)
emitting = false
amount = 10
lifetime = 0.1
one_shot = true
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
initial_velocity_min = 188.41
initial_velocity_max = 246.38

[connection signal="damage_particles" from="." to="." method="_on_damage_particles"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_hurt_box_body_exited"]
